--- a/index.html
+++ b/index.html
@@ -4,22 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/loginPage.css">
-    <title>Document</title>
+    <title>Robocotik</title>
 </head>
 <body>
-    <header>
-        <ul class = "nav">
-            <img src="" alt="">
-            <p>about me</p>
-            <p>login</p>
-        </ul>
-    </header>
     <main>
-
+        <section class = "form login">
+            
+        </section>
     </main>
-    <footer>
-
-    </footer>
     <link rel="stylesheet" href="./js/main.js">
 </body>
 </html>
