--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/loginPage.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Robocotik</title>
 </head>
+
 <body>
-    <main>
-        <section class = "form login">
-            
-        </section>
-    </main>
+    <section class="wrapper">
+        <form action="">
+            <h1>Login</h1>
+            <div class="input-box" >
+                <input type="text" placeholder="Username" required >
+                <i class='bx bxs-user'></i>
+            </div>
+            <div class="input-box" >
+                <input type="password" placeholder="Password" required>
+                <i class='bx bxs-lock-alt'></i>
+            </div>
+            <button type="submit" class="btn">Login</button>
+            <div class="remember-forgot">
+                <label for=""><input type="checkbox"> Remember me</label>
+                <a href="#"> Forgot password?</a>
+            </div>
+            <div class = "create-account">
+                <a href="#">Don't have an account?</a>
+            </div>
+
+        </form>
+    </section>
     <link rel="stylesheet" href="./js/main.js">
 </body>
+
 </html>
