--- a/pages/main.html
+++ b/pages/main.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/HeaderSoloPage.css">
     <link rel="stylesheet" href="../css/MainSoloPage.css">
     <link rel="stylesheet" href="../css/FooterSoloPage.css">
@@ -14,40 +15,106 @@
     <header>
         <nav>
             <div>
-                <svg width="60px" height="60px" viewBox="0 0 64.00 64.00" xmlns="http://www.w3.org/2000/svg" stroke-width="2.112" stroke="#ffffff" fill="none" transform="rotate(0)matrix(1, 0, 0, 1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><circle cx="34.52" cy="11.43" r="5.82"></circle><circle cx="53.63" cy="31.6" r="5.82"></circle><circle cx="34.52" cy="50.57" r="5.82"></circle><circle cx="15.16" cy="42.03" r="5.82"></circle><circle cx="15.16" cy="19.27" r="5.82"></circle><circle cx="34.51" cy="29.27" r="4.7"></circle><line x1="20.17" y1="16.3" x2="28.9" y2="12.93"></line><line x1="38.6" y1="15.59" x2="49.48" y2="27.52"></line><line x1="50.07" y1="36.2" x2="38.67" y2="46.49"></line><line x1="18.36" y1="24.13" x2="30.91" y2="46.01"></line><line x1="20.31" y1="44.74" x2="28.7" y2="48.63"></line><line x1="17.34" y1="36.63" x2="31.37" y2="16.32"></line><line x1="20.52" y1="21.55" x2="30.34" y2="27.1"></line><line x1="39.22" y1="29.8" x2="47.81" y2="30.45"></line><line x1="34.51" y1="33.98" x2="34.52" y2="44.74"></line></g></svg>
-                <a href="" class="logo">Robocotik</a>
+                <svg width="60px" height="60px" viewBox="0 0 64.00 64.00" xmlns="http://www.w3.org/2000/svg"
+                    stroke-width="2.112" stroke="#ffffff" fill="none" transform="rotate(0)matrix(1, 0, 0, 1, 0, 0)">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <circle cx="34.52" cy="11.43" r="5.82"></circle>
+                        <circle cx="53.63" cy="31.6" r="5.82"></circle>
+                        <circle cx="34.52" cy="50.57" r="5.82"></circle>
+                        <circle cx="15.16" cy="42.03" r="5.82"></circle>
+                        <circle cx="15.16" cy="19.27" r="5.82"></circle>
+                        <circle cx="34.51" cy="29.27" r="4.7"></circle>
+                        <line x1="20.17" y1="16.3" x2="28.9" y2="12.93"></line>
+                        <line x1="38.6" y1="15.59" x2="49.48" y2="27.52"></line>
+                        <line x1="50.07" y1="36.2" x2="38.67" y2="46.49"></line>
+                        <line x1="18.36" y1="24.13" x2="30.91" y2="46.01"></line>
+                        <line x1="20.31" y1="44.74" x2="28.7" y2="48.63"></line>
+                        <line x1="17.34" y1="36.63" x2="31.37" y2="16.32"></line>
+                        <line x1="20.52" y1="21.55" x2="30.34" y2="27.1"></line>
+                        <line x1="39.22" y1="29.8" x2="47.81" y2="30.45"></line>
+                        <line x1="34.51" y1="33.98" x2="34.52" y2="44.74"></line>
+                    </g>
+                </svg>
+                <a href="" class="logo ">Robocotik</a>
             </div>
-            <ul>
+            <ul class="nav__ul">
                 <li><a href="#about">About me</a></li>
                 <li><a href="#achivement">Achivements</a></li>
                 <li><a href="#history">My story</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="../index.html" target="_self"><button id = "nav__btn">Login</button></a></li>
+                <li><a href="../index.html" target="_self"><button id="nav__btn">Login</button></a></li>
             </ul>
+            <div id="listToggler">ТЫК</div>
         </nav>
     </header>
     <main>
         <section id="about" class="main__section">
-            <div>
-                <p class = "topic__section">About me</p>
+            <div class="grid-wrapper" style="border: 2px solid red;">
+                <div class="normal">
+                    <div id="myPhoto"></div>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, mollitia quasi, doloribus id ea,
+                        eius repudiandae quisquam harum architecto nam quod non ducimus. Deleniti expedita velit autem
+                        voluptate asperiores aliquid.</p>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, mollitia quasi, doloribus id ea,
+                        eius repudiandae quisquam harum architecto nam quod non ducimus. Deleniti expedita velit autem
+                        voluptate asperiores aliquid.</p>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, mollitia quasi, doloribus id ea,
+                        eius repudiandae quisquam harum architecto nam quod non ducimus. Deleniti expedita velit autem
+                        voluptate asperiores aliquid.</p>
+                </div>
             </div>
+
         </section>
 
         <section id="achivement" class="main__section">
             <div>
-                <p class = "topic__section">Achivments</p>
+                <p class="topic__section">Achivments</p>
+            </div>
+            <div class="cards">
+                <article class="card-item">
+                    <p class="card-name"> Высшая проба</p>
+                    <p class="card-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vel voluptates facere
+                        aliquam obcaecati quod exercitationem ipsum architecto quis doloribus nam, iste, veritatis
+                        explicabo? Placeat, dignissimos sint. Voluptas, placeat eligendi!
+                    </p>
+                </article>
+                <article class="card-item">
+                    <p class="card-name"> Высший пилотаж</p>
+                    <p class="card-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vel voluptates facere
+                        aliquam obcaecati quod exercitationem ipsum architecto quis doloribus nam, iste, veritatis
+                        explicabo? Placeat, dignissimos sint. Voluptas, placeat eligendi!
+                    </p>
+                </article>
+                <article class="card-item">
+                    <p class="card-name"> МОШ. Инженерно-конструкторский профиль</p>
+                    <p class="card-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vel voluptates facere
+                        aliquam obcaecati quod exercitationem ipsum architecto quis doloribus nam, iste, veritatis
+                        explicabo? Placeat, dignissimos sint. Voluptas, placeat eligendi!
+                    </p>
+                </article>
             </div>
         </section>
 
         <section id="history" class="main__section">
             <div>
-                <p class = "topic__section">My story/p>
+                <p class="topic__section">My story</p>
             </div>
         </section>
 
         <section id="experience" class="main__section">
             <div>
-                <p class = "topic__section">My projects</p>
+                <p class="topic__section">My projects</p>
             </div>
         </section>
     </main>
