--- a/pages/main.html
+++ b/pages/main.html
@@ -100,7 +100,7 @@
                     </p>
                 </article>
                 <article class="card-item" id="card3">
-                    <p class="card-name"> МОШ.<br>Инженерное направление</p>
+                    <p class="card-name"> МОШ<br>Инженерное направление</p>
                     <p class="card-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vel voluptates facere
                         aliquam obcaecati quod exercitationem ipsum architecto quis doloribus nam, iste, veritatis
@@ -108,7 +108,7 @@
                     </p>
                 </article>
                 <article class="card-item" id="card4">
-                    <p class="card-name"> МОШ.<br>Инженерное направление</p>
+                    <p class="card-name"> МОШ<br>Инженерное направление</p>
                     <p class="card-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vel voluptates facere
                         aliquam obcaecati quod exercitationem ipsum architecto quis doloribus nam, iste, veritatis
@@ -116,7 +116,7 @@
                     </p>
                 </article>
                 <article class="card-item" id="card5">
-                    <p class="card-name"> МОШ.<br>Инженерное направление</p>
+                    <p class="card-name"> МОШ<br>Инженерное направление</p>
                     <p class="card-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vel voluptates facere
                         aliquam obcaecati quod exercitationem ipsum architecto quis doloribus nam, iste, veritatis
