[ADDED] anim | button swipe scalling

--- a/pages/main.html
+++ b/pages/main.html
@@ -118,9 +118,7 @@
                 <article class="card-item" id="card5">
                     <p class="card-name"> МОШ<br>Инженерное направление</p>
                     <p class="card-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vel voluptates facere
-                        aliquam obcaecati quod exercitationem ipsum architecto quis doloribus nam, iste, veritatis
-                        explicabo? Placeat, dignissimos sint. Voluptas, placeat eligendi!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus magni deleniti amet est sit eaque dolore explicabo, vel quis eum consequatur neque inventore repellat voluptas nam harum atque obcaecati impedit!
                     </p>
                 </article>
                 <button id="btn__next__card" class="card__move"></button>
