[FIXED] naming | card-name

--- a/pages/main.html
+++ b/pages/main.html
@@ -108,7 +108,7 @@
                     </p>
                 </article>
                 <article class="card-item box-shadowing" id="card4">
-                    <p class="card-name"> МОШ<br><span>Инженерное направление</span></p>
+                    <p class="card-name"><span>ИнтЭра</span></p>
                     <p class="card-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vel voluptates facere
                         aliquam obcaecati quod exercitationem ipsum architecto quis doloribus nam, iste, veritatis
@@ -116,7 +116,7 @@
                     </p>
                 </article>
                 <article class="card-item box-shadowing" id="card5">
-                    <p class="card-name"> МОШ<br><span>Инженерное направление</span></p>
+                    <p class="card-name"><span>DriveHack</span></p>
                     <p class="card-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus magni deleniti amet est sit eaque dolore explicabo, vel quis eum consequatur neque inventore repellat voluptas nam harum atque obcaecati impedit!
                     </p>
